# haskell-tmpl

./: CHANGELOG.md  LICENSE  cabal.project  cargo-generate.toml  flake.nix  hie.yaml  {{ project-name }}.cabal
